--- a/src/style.css
+++ b/src/style.css
@@ -8,9 +8,11 @@ h1 {
   color: #42a5f5;
   text-align: center;
   font-weight: 900;
+  font-size: 50px;
 }
 form {
-  margin: 0 0 0 60px;
+  margin: 0 auto;
+  text-align: center;
 }
 label {
   font-size: 20px;
@@ -43,11 +45,13 @@ div.card {
   border-radius: 15px;
 }
 div.row h3 {
-  font-size: 44px;
+  color: #ab47bc;
+  text-align: right;
+  font-size: 70px;
   font-weight: 900;
-  margin: 0 0 0 25px;
-  padding: 10px 0;
-  line-height: 10px;
+  padding: 10px;
+  line-height: 15px;
+  margin: 0 50px 0;
 }
 
 div.fri,
@@ -70,4 +74,7 @@ div.fri,
 .futureWeather {
   font-size: 30px;
   font-weight: bolder;
+}
+.hi-lo {
+  text-align: center;
 }
