--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,9 @@ label {
 img {
   margin-right: -24px;
 }
-
+a {
+  color: #42a5f5;
+}
 ul,
 .date-time {
   text-align: left;
@@ -80,10 +82,10 @@ div.fri,
   color: #ffff;
   text-align: left;
   font-size: 30px;
-  margin: 0 0 5px;
+  margin: 25px 0 5px;
 }
 
 .weather-details {
   text-align: Left;
-  margin: 0 2px 0 65px;
+  margin: -3px 2px 0 65px;
 }
