--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@ label {
   font-size: 20px;
   margin-bottom: 1px;
 }
-img {
+img h3 {
   margin-right: -24px;
 }
 a {
@@ -51,7 +51,7 @@ div.card {
   border: 1px solid #42a5f5;
   border-radius: 15px;
 }
-div.row h3 {
+h3 {
   color: #ab47bc;
   text-align: right;
   font-size: 70px;
@@ -70,10 +70,11 @@ div.row h3 {
 .btn:hover {
   background: #fbc2eb;
 }
-.future-weather {
+div.future-weather {
   color: #ffff;
   text-align: left;
-  font-size: 20px;
+  font-size: 30px;
+  margin: 25px 0 5px;
 }
 
 .weather-details {
