--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@ label {
   font-size: 20px;
   margin-bottom: 1px;
 }
-img h3 {
+img {
   margin-right: -24px;
 }
 a {
@@ -73,7 +73,7 @@ h3 {
 div.future-weather {
   color: #ffff;
   text-align: left;
-  font-size: 30px;
+  font-size: 18px;
   margin: 25px 0 5px;
 }
 
