--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@ label {
   margin-bottom: 1px;
 }
 img {
-  margin-right: -24px;
+  margin-left: 1px;
 }
 a {
   color: #42a5f5;
@@ -41,7 +41,7 @@ div.row {
   color: #ab47bc;
 }
 .hi-lo {
-  font-size: 20px;
+  font-size: 13px;
 }
 .container {
   max-width: 700px;
@@ -57,7 +57,7 @@ h3 {
   font-size: 70px;
   padding: 5px;
   line-height: 15px;
-  margin-right: 35px;
+  margin-right: 30px;
 }
 #descrip {
   text-transform: capitalize;
@@ -88,4 +88,9 @@ div.future-weather {
 .active:hover {
   text-decoration: none;
   color: #ab47bc;
+}
+#forecast {
+  color: white;
+  text-align: center;
+  width: 95%;
 }
